--- a/src/Components/MainPage.css
+++ b/src/Components/MainPage.css
@@ -2,7 +2,7 @@
     display: flex; 
     min-Height: 100vh; 
     max-Height: 100vh;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(0, 157, 196);
 }
 
 .column {
@@ -15,12 +15,14 @@
     position: absolute;
     top: 65%;
     width: 45%;
+    color: rgb(255, 255, 255);
 }
 
 .input
 {
     position: absolute;
     top: 90%;
+    color: rgb(255, 255, 255);
 }
 
 .buttons
@@ -35,4 +37,5 @@ p
     font-size: small;
     font-style: italic;
     margin: 0.5%;
+    color: rgb(255, 255, 255);
 }
